Added haseeb to authors

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,5 @@
 Following are the current developers in the project.
 
       Suraj Deuja <surajdeuja@u.boisestate.edu>
+
+      Haseeb Nain <haseebnain@u.boisestate.edu>
